--- a/index.html
+++ b/index.html
@@ -1,51 +1,44 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-<meta charset="utf-8"/>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-<link rel="stylesheet" href="./style.css"/>
+    <meta charset="utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
+    <link rel="stylesheet" href="./style.css"/>
 
-<style>
-        /* Убираем выделение по нажатию клавиш */
+    <style>
+        /* Remove focus outline on canvas */
         canvas:focus {
             outline: none;
         }
 
         html, body {
-            /* Убираем отступы */
             padding: 0;
             margin: 0;
-            /* Отключаем скролл и лонгтап на IOS */
             overflow: hidden;
             -webkit-touch-callout: none;
             -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
             user-select: none;
             -webkit-tap-highlight-color: rgba(0,0,0,0);
-            /* Ставим высоту на 100% */
             height: 100%;
         }
     </style>
 </head>
 <body class="dark">
-<div id="unity-container" class="unity-desktop">
-<canvas id="unity-canvas" tabindex="-1"></canvas>
-</div>
-<div id="loading-cover" style="display:none;">
-<div id="unity-loading-bar">
-<div id="unity-logo"><img src="gp.png"/></div>
-<div id="unity-progress-bar-empty" style="display: none;">
-<div id="unity-progress-bar-full"></div>
-</div>
-<div class="spinner"></div>
-</div>
-</div>
+    <div id="unity-container" class="unity-desktop">
+        <canvas id="unity-canvas" tabindex="-1"></canvas>
+    </div>
+    <div id="loading-cover" style="display:none;">
+        <div id="unity-loading-bar">
+            <div id="unity-logo"><img src="gp.png"/></div>
+            <div id="unity-progress-bar-empty" style="display: none;">
+                <div id="unity-progress-bar-full"></div>
+            </div>
+            <div class="spinner"></div>
+        </div>
+    </div>
 
-<script>
-        const hideFullScreenButton = "";
+    <script>
         const buildUrl = "Build";
         const loaderUrl = buildUrl + "/build.loader.js";
         const config = {
@@ -58,72 +51,38 @@
             productVersion: "1.0.0.0"
         };
 
-        const container = document.querySelector("#unity-container");
         const canvas = document.querySelector("#unity-canvas");
         const loadingCover = document.querySelector("#loading-cover");
-        const progressBarEmpty = document.querySelector("#unity-progress-bar-empty");
         const progressBarFull = document.querySelector("#unity-progress-bar-full");
         const spinner = document.querySelector('.spinner');
 
-        if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-            container.className = "unity-mobile";
-        }
+        let myGameInstance = null;
 
-        loadingCover.style.background = "url('background.gif') center / cover";
-        loadingCover.style.display = "";
-
-        document.addEventListener('contextmenu', event => event.preventDefault());
-
-        function FocusGame() {
-            window.focus();
-            canvas.focus();
-        }
-
-        window.addEventListener('pointerdown', FocusGame);
-        window.addEventListener('touchstart', FocusGame);
-
-        let StartUnityInstance;
-        let myGameInstance;
-        let ysdk = null; 
-
-        let environmentData = {
-            language: "en",
-            domain: "default_domain",
-            deviceType: "desktop",
-            isMobile: false,
-            isDesktop: true,
-            isTablet: false,
-            isTV: false,
-            appID: "default_app_id",
-            browserLang: navigator.language || "en",
-            payload: null,
-            promptCanShow: false,
-            reviewCanShow: false,
-            platform: navigator.platform,
-            browser: "Chrome"
-        };
-        
-        let cloudSaves = 'noData';
-        let paymentsData = 'none';
-        let playerData = 'noData'; 
-        let player = null;
-        let payments = null;
-        let initGame = false;
-        let nowFullAdOpen = false;
-
-        // --- AD BLOCKER / BYPASS LOGIC ---
+        // --- ENHANCED AD-BLOCK & AUTO-RESUME ---
         function FullAdShow() { 
-            console.log("Full ad blocked. Resuming..."); 
-            // Tell Unity the ad closed immediately
-            if (myGameInstance) myGameInstance.SendMessage('YandexGame', 'CloseFullAd');
+            console.log("Ad requested: Bypassing..."); 
+            if (myGameInstance) {
+                // Short delay ensures Unity finishes its 'Pause' logic before we 'Resume'
+                setTimeout(() => {
+                    myGameInstance.SendMessage('YandexGame', 'CloseFullAd');
+                    console.log("Resume signal sent.");
+                }, 150);
+            }
         }
 
         function RewardedShow(id) { 
-            console.log("Rewarded ad bypassed. Giving reward for ID:", id); 
-            // Tell Unity the ad was watched successfully
-            if (myGameInstance) myGameInstance.SendMessage('YandexGame', 'RewardIndexed', id);
+            console.log("Reward requested: Unlocking ID " + id); 
+            if (myGameInstance) {
+                setTimeout(() => {
+                    myGameInstance.SendMessage('YandexGame', 'RewardIndexed', id);
+                    myGameInstance.SendMessage('YandexGame', 'CloseFullAd');
+                }, 150);
+            }
         }
 
+        // --- SDK DUMMY FUNCTIONS (Prevents Script Crashes) ---
+        let environmentData = { language: "en", isDesktop: true, browser: "Chrome" };
+        let cloudSaves = 'noData', paymentsData = 'none', playerData = 'noData';
         function GetPayments() { return Promise.resolve("none"); }
         function SaveCloud() { }
         function LoadCloud() { return Promise.resolve("noData"); }
@@ -132,44 +91,34 @@
         function Review() { }
         function PromptShow() { }
         function InitLeaderboards() { }
-        function GetLeaderboardScores() { }
-        function SetLeaderboardScores() { }
-        function ConsumePurchase() { }
-        function ConsumePurchases() { }
 
-        // --- INITIALIZATION ---
-        try {
-            const script = document.createElement("script");
-            script.src = loaderUrl;
-            script.onload = () => {
-                createUnityInstance(canvas, config, (progress) => {
-                    spinner.style.display = "none";
-                    progressBarEmpty.style.display = "";
-                    progressBarFull.style.width = `${100 * progress}%`;
-                }).then((unityInstance) => {
-                    myGameInstance = unityInstance;
-                    loadingCover.style.display = "none";
-                }).catch((message) => {
-                    console.error("Unity Error:", message);
-                });
-            };
-            document.body.appendChild(script);
-        } catch (error) {
-            console.error("Critical Start Error:", error);
-        }
+        // --- START UNITY ---
+        const script = document.createElement("script");
+        script.src = loaderUrl;
+        script.onload = () => {
+            loadingCover.style.display = "";
+            createUnityInstance(canvas, config, (progress) => {
+                spinner.style.display = "none";
+                document.querySelector("#unity-progress-bar-empty").style.display = "";
+                progressBarFull.style.width = `${100 * progress}%`;
+            }).then((unityInstance) => {
+                myGameInstance = unityInstance;
+                loadingCover.style.display = "none";
+            }).catch((message) => {
+                console.error("Unity Loading Error:", message);
+            });
+        };
+        document.body.appendChild(script);
 
         function InitGame() {
-            try {
-                console.log('Gravity Mod Loaded - Ads Stripped');
-                initGame = true;
-            } catch (error) {
-                console.error("InitGame error:", error);
-            }
+            console.log('Gravity Mod: Ready to play (Ads Blocked)');
         }
 
-        window.addEventListener("unhandledrejection", function(event) {
-            event.preventDefault();
-        });
+        // Prevent Right-Click Menu
+        document.addEventListener('contextmenu', e => e.preventDefault());
+
+        // Global Error Handling
+        window.addEventListener("unhandledrejection", e => e.preventDefault());
     </script>
 </body>
 </html>
