--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <div id="loading-cover" style="display:none;">
         <div id="unity-loading-bar">
-            <div id="unity-logo"><img src="gp.png"/></div>
+            <div id="unity-logo"><img src="newicon.png"/></div>
             <div id="unity-progress-bar-empty" style="display: none;">
                 <div id="unity-progress-bar-full"></div>
             </div>
