--- a/index.html
+++ b/index.html
@@ -4,37 +4,98 @@
     <meta charset="utf-8"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
-    <link rel="stylesheet" href="./style.css"/>
+    <title>Gravity Mod</title>
 
     <style>
-        /* Remove focus outline on canvas */
-        canvas:focus {
-            outline: none;
-        }
-
+        /* CSS to center everything and make it look official */
         html, body {
             padding: 0;
             margin: 0;
             overflow: hidden;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            user-select: none;
-            -webkit-tap-highlight-color: rgba(0,0,0,0);
+            background-color: #1a1a1a; /* Dark background like GMod */
+            color: white;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             height: 100%;
+            width: 100%;
+        }
+
+        canvas:focus {
+            outline: none;
+        }
+
+        #unity-container {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+        }
+
+        #loading-cover {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #232323;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 10;
+        }
+
+        #unity-loading-bar {
+            width: 250px;
+            text-align: center;
+        }
+
+        #unity-logo img {
+            max-width: 150px;
+            margin-bottom: 20px;
+        }
+
+        #unity-progress-bar-empty {
+            width: 100%;
+            height: 12px;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 6px;
+            margin-top: 15px;
+            overflow: hidden;
+            display: none; /* Shown via JS when loading starts */
+        }
+
+        #unity-progress-bar-full {
+            height: 100%;
+            background: #00e5ff; /* Cyan color */
+            width: 0%;
+            transition: width 0.2s;
+        }
+
+        .spinner {
+            border: 4px solid rgba(255, 255, 255, 0.1);
+            border-left-color: #00e5ff;
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+            margin: 10px auto;
+        }
+
+        @keyframes spin {
+            to { transform: rotate(360deg); }
         }
     </style>
 </head>
 <body class="dark">
-    <div id="unity-container" class="unity-desktop">
+    <div id="unity-container">
         <canvas id="unity-canvas" tabindex="-1"></canvas>
     </div>
-    <div id="loading-cover" style="display:none;">
+
+    <div id="loading-cover">
         <div id="unity-loading-bar">
             <div id="unity-logo"><img src="newicon.png"/></div>
-            <div id="unity-progress-bar-empty" style="display: none;">
+            <div class="spinner"></div>
+            <div id="unity-progress-bar-empty">
                 <div id="unity-progress-bar-full"></div>
             </div>
-            <div class="spinner"></div>
         </div>
     </div>
 
@@ -53,72 +114,11 @@
 
         const canvas = document.querySelector("#unity-canvas");
         const loadingCover = document.querySelector("#loading-cover");
+        const progressBarEmpty = document.querySelector("#unity-progress-bar-empty");
         const progressBarFull = document.querySelector("#unity-progress-bar-full");
         const spinner = document.querySelector('.spinner');
 
         let myGameInstance = null;
 
-        // --- ENHANCED AD-BLOCK & AUTO-RESUME ---
-        function FullAdShow() { 
-            console.log("Ad requested: Bypassing..."); 
-            if (myGameInstance) {
-                // Short delay ensures Unity finishes its 'Pause' logic before we 'Resume'
-                setTimeout(() => {
-                    myGameInstance.SendMessage('YandexGame', 'CloseFullAd');
-                    console.log("Resume signal sent.");
-                }, 150);
-            }
-        }
-
-        function RewardedShow(id) { 
-            console.log("Reward requested: Unlocking ID " + id); 
-            if (myGameInstance) {
-                setTimeout(() => {
-                    myGameInstance.SendMessage('YandexGame', 'RewardIndexed', id);
-                    myGameInstance.SendMessage('YandexGame', 'CloseFullAd');
-                }, 150);
-            }
-        }
-
-        // --- SDK DUMMY FUNCTIONS (Prevents Script Crashes) ---
-        let environmentData = { language: "en", isDesktop: true, browser: "Chrome" };
-        let cloudSaves = 'noData', paymentsData = 'none', playerData = 'noData';
-        function GetPayments() { return Promise.resolve("none"); }
-        function SaveCloud() { }
-        function LoadCloud() { return Promise.resolve("noData"); }
-        function InitPlayer() { return Promise.resolve("noData"); }
-        function StickyAdActivity() { }
-        function Review() { }
-        function PromptShow() { }
-        function InitLeaderboards() { }
-
-        // --- START UNITY ---
-        const script = document.createElement("script");
-        script.src = loaderUrl;
-        script.onload = () => {
-            loadingCover.style.display = "";
-            createUnityInstance(canvas, config, (progress) => {
-                spinner.style.display = "none";
-                document.querySelector("#unity-progress-bar-empty").style.display = "";
-                progressBarFull.style.width = `${100 * progress}%`;
-            }).then((unityInstance) => {
-                myGameInstance = unityInstance;
-                loadingCover.style.display = "none";
-            }).catch((message) => {
-                console.error("Unity Loading Error:", message);
-            });
-        };
-        document.body.appendChild(script);
-
-        function InitGame() {
-            console.log('Gravity Mod: Ready to play (Ads Blocked)');
-        }
-
-        // Prevent Right-Click Menu
-        document.addEventListener('contextmenu', e => e.preventDefault());
-
-        // Global Error Handling
-        window.addEventListener("unhandledrejection", e => e.preventDefault());
-    </script>
-</body>
-</html>
+        // --- THE "AD-SKIPPER" LOGIC ---
+        // This stops the game from freezing by telling Unity the
