--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
         html, body {
             padding: 0; margin: 0; overflow: hidden;
             -webkit-touch-callout: none; -webkit-user-select: none;
-            user-select: none; height: 100%; background: #000;
+            user-select: none; height: 100%; background: #1a1a1a;
         }
+        #unity-container { width: 100%; height: 100%; }
     </style>
 </head>
 <body class="dark">
@@ -29,31 +30,7 @@
     </div>
 
     <script>
-        // --- 1. FAKE SDK INITIALIZATION (Fixes Black Screen) ---
-        // Many Unity games hang if they don't see a 'YaGames' object
-        window.YaGames = {
-            init: function() {
-                return new Promise((resolve) => {
-                    console.log("Fake SDK Initialized");
-                    const mockLib = {
-                        adv: {
-                            showFullscreenAdv: (opts) => { opts.callbacks.onClose(true); },
-                            showRewardedVideo: (opts) => { opts.callbacks.onReward(); opts.callbacks.onClose(); }
-                        },
-                        getPlayer: () => Promise.resolve({ 
-                            getName: () => "Player", 
-                            getPhoto: () => "", 
-                            getData: () => Promise.resolve({}),
-                            setData: () => Promise.resolve()
-                        }),
-                        getPayments: () => Promise.reject("Payments Disabled"),
-                        getEnvironment: () => ({ language: "en", deviceType: "desktop" })
-                    };
-                    resolve(mockLib);
-                });
-            }
-        };
-
+        // --- 1. CONFIG & INSTANCE VARS ---
         const buildUrl = "Build";
         const loaderUrl = buildUrl + "/build.loader.js";
         const config = {
@@ -66,46 +43,72 @@
             productVersion: "1.0.0.0"
         };
 
-        const canvas = document.querySelector("#unity-canvas");
-        const loadingCover = document.querySelector("#loading-cover");
-        const progressBarFull = document.querySelector("#unity-progress-bar-full");
-        const spinner = document.querySelector('.spinner');
-
         let myGameInstance = null;
 
-        // --- 2. AD OVERRIDES ---
-        function FullAdShow() {
-            if (myGameInstance) myGameInstance.SendMessage('YandexGame', 'CloseFullAd');
+        // --- 2. THE "FAKE" SDK (Crucial for Finishing Loading) ---
+        // These variables must exist for the C# script to "verify" the SDK is active
+        var ysdk = {
+            adv: {
+                showFullscreenAdv: (opts) => { if(opts.callbacks) opts.callbacks.onClose(true); },
+                showRewardedVideo: (opts) => { if(opts.callbacks) { opts.callbacks.onOpen(); opts.callbacks.onReward(); opts.callbacks.onClose(); } }
+            },
+            getPlayer: () => Promise.resolve({ 
+                getName: () => "Player", getPhoto: () => "", 
+                getData: () => Promise.resolve({}), setData: () => Promise.resolve() 
+            }),
+            getEnvironment: () => ({ language: "en", domain: "com", deviceType: "desktop" }),
+            getPayments: () => Promise.reject("Disabled")
+        };
+
+        // Standard variables expected by YandexGame template
+        var player = "noData";
+        var cloudSaves = "noData";
+        var paymentsData = "none";
+        var environmentData = { language: "en", deviceType: "desktop", isMobile: false, isDesktop: true };
+
+        // --- 3. AD & INITIALIZATION HANDLERS ---
+        function FullAdShow() { 
+            if (myGameInstance) myGameInstance.SendMessage('YandexGame', 'CloseFullAd'); 
         }
-        function RewardedShow() {
+        function RewardedShow() { 
             if (myGameInstance) {
                 myGameInstance.SendMessage('YandexGame', 'Reward', 1);
                 myGameInstance.SendMessage('YandexGame', 'CloseFullAd');
             }
         }
         function StickyAdActivity() {}
-        function InitGame() { 
-            console.log("Game Handshake Complete"); 
-            if (myGameInstance) myGameInstance.SendMessage('YandexGame', 'Initialized');
+
+        function InitGame() {
+            console.log("SDK Bypass: Sending Initialization Signal...");
+            if (myGameInstance) {
+                // This tells the Unity side that the SDK check is complete
+                myGameInstance.SendMessage('YandexGame', 'SetEnvironmentData', JSON.stringify(environmentData));
+                myGameInstance.SendMessage('YandexGame', 'Initialized');
+            }
         }
 
-        // --- 3. UNITY LOADER ---
+        // --- 4. LOADER LOGIC ---
+        const canvas = document.querySelector("#unity-canvas");
+        const loadingCover = document.querySelector("#loading-cover");
+        const progressBarFull = document.querySelector("#unity-progress-bar-full");
+
         const script = document.createElement("script");
         script.src = loaderUrl;
         script.onload = () => {
             createUnityInstance(canvas, config, (progress) => {
-                spinner.style.display = "none";
                 progressBarFull.style.width = `${100 * progress}%`;
             }).then((unityInstance) => {
                 myGameInstance = unityInstance;
                 loadingCover.style.display = "none";
+                // Trigger the fake init after a short delay to ensure C# is ready
+                setTimeout(InitGame, 500);
             }).catch((err) => {
-                console.error("Unity Error:", err);
+                alert("Unity Load Error. Check Console.");
+                console.error(err);
             });
         };
         document.body.appendChild(script);
 
-        // Prevent Right Click
         document.addEventListener('contextmenu', e => e.preventDefault());
     </script>
 </body>
